--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Happy Birthday!</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+      background: linear-gradient(45deg, red, orange, yellow, green, cyan, blue, violet);
+      background-size: 400% 400%;
+      animation: moveBg 10s linear infinite;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    @keyframes moveBg {
+      0% { background-position: 0% 50%; }
+      100% { background-position: 100% 50%; }
+    }
+
+    h1 {
+      font-size: 10vw;
+      font-family: sans-serif;
+      font-weight: bold;
+      background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet);
+      background-size: 200% 200%;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      transition: background-position 0.1s linear;
+    }
+  </style>
+</head>
+<body>
+  <h1 id="birthdayText">Happy Birthday!</h1>
+
+  <script>
+    if (window.DeviceOrientationEvent) {
+      window.addEventListener('deviceorientation', function(event) {
+        const gamma = event.gamma || 0; // left to right tilt
+        const beta = event.beta || 0;   // front to back tilt
+
+        // Normalize gamma and beta to range [0, 1]
+        const x = (gamma + 90) / 180;
+        const y = (beta + 180) / 360;
+
+        const h1 = document.getElementById('birthdayText');
+        h1.style.backgroundPosition = `${x * 100}% ${y * 100}%`;
+      }, true);
+    } else {
+      alert("Your device doesn't support gyroscope motion!");
+    }
+  </script>
+</body>
+</html>
 
