--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
       margin: 0;
       padding: 0;
       height: 100%;
-      overflow: hidden;
-      background: linear-gradient(45deg, red, orange, yellow, green, cyan, blue, violet);
-      background-size: 400% 400%;
-      animation: moveBg 10s linear infinite;
+      background: linear-gradient(45deg, red, orange, yellow, green, cyan, blue, violet, pink, lime, gold);
+      background-size: 500% 500%;
+      animation: moveBg 20s linear infinite;
       display: flex;
       justify-content: center;
       align-items: center;
+      overflow: hidden;
     }
 
     @keyframes moveBg {
@@ -23,38 +23,67 @@
       100% { background-position: 100% 50%; }
     }
 
-    h1 {
-      font-size: 10vw;
+    .circle-text {
+      position: relative;
+      width: 80vmin;
+      height: 80vmin;
+      border-radius: 50%;
+      transform-style: preserve-3d;
+    }
+
+    .circle-text span {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform-origin: 0 0;
+      font-size: 5vmin;
       font-family: sans-serif;
       font-weight: bold;
-      background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet);
-      background-size: 200% 200%;
+      background: linear-gradient(90deg, red, orange, yellow, green, blue, indigo, violet, cyan, pink, lime, gold);
+      background-size: 300% 300%;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      transition: background-position 0.1s linear;
+      pointer-events: none;
     }
   </style>
 </head>
 <body>
-  <h1 id="birthdayText">Happy Birthday!</h1>
+  <div class="circle-text" id="circleText"></div>
 
   <script>
-    if (window.DeviceOrientationEvent) {
-      window.addEventListener('deviceorientation', function(event) {
-        const gamma = event.gamma || 0; // left to right tilt
-        const beta = event.beta || 0;   // front to back tilt
+    const text = "🎉 Happy Birthday! 🎂 ";
+    const container = document.getElementById('circleText');
 
-        // Normalize gamma and beta to range [0, 1]
+    // Create circular text
+    const chars = text.repeat(5).split(""); // Repeat to fill the circle
+    const total = chars.length;
+    chars.forEach((char, i) => {
+      const span = document.createElement("span");
+      span.textContent = char;
+      const angle = (360 / total) * i;
+      span.style.transform = `rotate(${angle}deg) translate(40vmin) rotate(${angle * -1}deg)`;
+      container.appendChild(span);
+    });
+
+    // Gyroscope gradient shift
+    if (window.DeviceOrientationEvent) {
+      window.addEventListener('deviceorientation', (e) => {
+        const gamma = e.gamma || 0; // left-right tilt [-90,90]
+        const beta = e.beta || 0;   // front-back tilt [-180,180]
+
         const x = (gamma + 90) / 180;
         const y = (beta + 180) / 360;
 
-        const h1 = document.getElementById('birthdayText');
-        h1.style.backgroundPosition = `${x * 100}% ${y * 100}%`;
-      }, true);
+        const bgX = x * 300;
+        const bgY = y * 300;
+
+        container.querySelectorAll('span').forEach(span => {
+          span.style.backgroundPosition = `${bgX}% ${bgY}%`;
+        });
+      });
     } else {
-      alert("Your device doesn't support gyroscope motion!");
+      alert("Your device doesn't support motion sensors.");
     }
   </script>
 </body>
 </html>
-
