--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Happy Birthday!</title>
   <style>
     html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
+      margin: 0; padding: 0; height: 100%;
       background: linear-gradient(120deg, red, orange, yellow, green, cyan, blue, violet);
       background-size: 600% 600%;
       animation: backgroundMove 20s ease infinite;
@@ -17,30 +15,30 @@
       align-items: center;
       justify-content: center;
       overflow: hidden;
+      flex-direction: column;
     }
-
     @keyframes backgroundMove {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
-
     .container {
       text-align: center;
       padding: 2rem;
       backdrop-filter: blur(10px);
-      background: rgba(255, 255, 255, 0.05);
+      background: rgba(255,255,255,0.05);
       border-radius: 2rem;
       box-shadow: 0 0 30px rgba(0,0,0,0.3);
       border: 2px solid rgba(255,255,255,0.2);
       animation: fadeIn 2s ease-in-out;
+      max-width: 90vw;
+      position: relative;
+      z-index: 10;
     }
-
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+      from {opacity: 0; transform: translateY(20px);}
+      to {opacity: 1; transform: translateY(0);}
     }
-
     h1 {
       font-size: 12vw;
       margin: 0;
@@ -52,11 +50,34 @@
       -webkit-text-fill-color: transparent;
       transition: background-position 0.05s;
     }
-
     p {
       color: white;
       font-size: 5vw;
       margin-top: 1rem;
+      margin-bottom: 2rem;
+    }
+    button {
+      font-size: 1.8rem;
+      padding: 0.8rem 2rem;
+      border: none;
+      border-radius: 1rem;
+      background: linear-gradient(45deg, #ff0057, #ff7a00);
+      color: white;
+      cursor: pointer;
+      box-shadow: 0 0 15px #ff0057;
+      transition: background 0.3s ease;
+    }
+    button:hover {
+      background: linear-gradient(45deg, #ff7a00, #ff0057);
+    }
+    #confetti-canvas {
+      position: fixed;
+      pointer-events: none;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 9999;
+      display: none;
     }
   </style>
 </head>
@@ -64,22 +85,121 @@
   <div class="container">
     <h1 id="title">Happy Birthday!</h1>
     <p>Have the best day ever 🎉</p>
+    <button id="playPauseBtn">Pause Music</button>
   </div>
+
+  <audio 
+    id="birthdaySong" 
+    src="https://raw.githubusercontent.com/Nathanuk1231/HAPPY-BIRTHDAY/main/no%20copyright%20music%20lofi%20type%20beat%20sparky%20night%20free%20vlog%20music.mp3" 
+    preload="auto" autoplay loop></audio>
+
+  <canvas id="confetti-canvas"></canvas>
 
   <script>
     const title = document.getElementById('title');
+    const playPauseBtn = document.getElementById('playPauseBtn');
+    const birthdaySong = document.getElementById('birthdaySong');
+    const confettiCanvas = document.getElementById('confetti-canvas');
+    const ctx = confettiCanvas.getContext('2d');
 
+    function resizeCanvas() {
+      confettiCanvas.width = window.innerWidth;
+      confettiCanvas.height = window.innerHeight;
+    }
+    window.addEventListener('resize', resizeCanvas);
+    resizeCanvas();
+
+    const confettiCount = 150;
+    const confettiColors = ['#ff0057', '#ff7a00', '#fffa00', '#00ffab', '#00d4ff', '#8b00ff'];
+    const confettiParticles = [];
+
+    class ConfettiParticle {
+      constructor() {
+        this.x = Math.random() * confettiCanvas.width;
+        this.y = Math.random() * confettiCanvas.height - confettiCanvas.height;
+        this.size = Math.random() * 8 + 4;
+        this.color = confettiColors[Math.floor(Math.random() * confettiColors.length)];
+        this.speedY = Math.random() * 3 + 2;
+        this.speedX = Math.random() * 2 - 1;
+        this.rotation = Math.random() * 360;
+        this.rotationSpeed = Math.random() * 10 - 5;
+      }
+      update() {
+        this.y += this.speedY;
+        this.x += this.speedX;
+        this.rotation += this.rotationSpeed;
+        if (this.y > confettiCanvas.height) {
+          this.y = -this.size;
+          this.x = Math.random() * confettiCanvas.width;
+        }
+        if (this.x > confettiCanvas.width) {
+          this.x = 0;
+        }
+        if (this.x < 0) {
+          this.x = confettiCanvas.width;
+        }
+      }
+      draw() {
+        ctx.save();
+        ctx.translate(this.x, this.y);
+        ctx.rotate(this.rotation * Math.PI / 180);
+        ctx.fillStyle = this.color;
+        ctx.fillRect(-this.size / 2, -this.size / 2, this.size, this.size);
+        ctx.restore();
+      }
+    }
+
+    function createConfetti() {
+      for(let i = 0; i < confettiCount; i++) {
+        confettiParticles.push(new ConfettiParticle());
+      }
+    }
+
+    function animateConfetti() {
+      ctx.clearRect(0, 0, confettiCanvas.width, confettiCanvas.height);
+      confettiParticles.forEach(p => {
+        p.update();
+        p.draw();
+      });
+      if(confettiActive) {
+        requestAnimationFrame(animateConfetti);
+      }
+    }
+
+    let confettiActive = false;
+    createConfetti();
+
+    // Start confetti automatically with music
+    confettiActive = true;
+    confettiCanvas.style.display = 'block';
+    animateConfetti();
+
+    playPauseBtn.addEventListener('click', () => {
+      if (birthdaySong.paused) {
+        birthdaySong.play();
+        playPauseBtn.textContent = 'Pause Music';
+        if (!confettiActive) {
+          confettiActive = true;
+          confettiCanvas.style.display = 'block';
+          animateConfetti();
+        }
+      } else {
+        birthdaySong.pause();
+        playPauseBtn.textContent = 'Play Music';
+        confettiActive = false;
+        confettiCanvas.style.display = 'none';
+      }
+    });
+
+    // Gyroscope effect
     if (window.DeviceOrientationEvent) {
       window.addEventListener('deviceorientation', (e) => {
-        const gamma = e.gamma || 0; // left/right [-90, 90]
-        const beta = e.beta || 0;   // front/back [-180, 180]
-
+        const gamma = e.gamma || 0;
+        const beta = e.beta || 0;
         const x = (gamma + 90) / 180;
         const y = (beta + 180) / 360;
-
         const xShift = x * 300;
         const yShift = y * 300;
-
         title.style.backgroundPosition = `${xShift}% ${yShift}%`;
       });
     } else {
