--- a/index.html
+++ b/index.html
@@ -1,38 +1,70 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Happy Birthday!</title>
   <style>
     html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      font-family: 'Segoe UI', sans-serif;
+      margin: 0; padding: 0; height: 100%;
       background: linear-gradient(120deg, red, orange, yellow, green, cyan, blue, violet);
       background-size: 600% 600%;
       animation: backgroundMove 20s ease infinite;
+      font-family: 'Segoe UI', sans-serif;
       overflow: hidden;
+      color: white;
+      user-select: none;
     }
-
     @keyframes backgroundMove {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
 
+    /* Top fixed toggle button */
+    #toggleViewBtn {
+      position: fixed;
+      top: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 10000;
+      padding: 12px 28px;
+      font-size: 1.25rem;
+      border: none;
+      border-radius: 1rem;
+      background: linear-gradient(45deg, #ff0057, #ff7a00);
+      color: white;
+      cursor: pointer;
+      box-shadow: 0 0 15px #ff0057;
+      transition: background 0.3s ease;
+    }
+    #toggleViewBtn:hover {
+      background: linear-gradient(45deg, #ff7a00, #ff0057);
+    }
+
+    /* Container for birthday message */
     .container {
-      text-align: center;
-      padding: 2rem;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       backdrop-filter: blur(10px);
-      background: rgba(255, 255, 255, 0.05);
+      background: rgba(255,255,255,0.05);
       border-radius: 2rem;
       box-shadow: 0 0 30px rgba(0,0,0,0.3);
       border: 2px solid rgba(255,255,255,0.2);
-      margin: 2rem;
+      padding: 2rem;
+      text-align: center;
+      max-width: 90vw;
+      margin: 0 auto;
+      animation: fadeIn 2s ease-in-out;
     }
-
+    @keyframes fadeIn {
+      from {opacity: 0; transform: translateY(20px);}
+      to {opacity: 1; transform: translateY(0);}
+    }
     h1 {
       font-size: 12vw;
       margin: 0;
@@ -43,63 +75,196 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       transition: background-position 0.05s;
+      user-select: none;
     }
-
     p {
-      color: white;
       font-size: 5vw;
       margin-top: 1rem;
+      margin-bottom: 2rem;
+      user-select: none;
     }
 
-    button {
-      margin: 10px;
-      padding: 15px 30px;
+    /* Music control button */
+    #playPauseBtn {
       font-size: 1.5rem;
+      padding: 0.8rem 2rem;
       border: none;
-      border-radius: 10px;
+      border-radius: 1rem;
+      background: linear-gradient(45deg, #ff0057, #ff7a00);
+      color: white;
       cursor: pointer;
-      background: white;
-      color: black;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      box-shadow: 0 0 15px #ff0057;
+      transition: background 0.3s ease;
+      user-select: none;
+    }
+    #playPauseBtn:hover {
+      background: linear-gradient(45deg, #ff7a00, #ff0057);
     }
 
-    #pebble {
-      width: 100px;
-      height: 50px;
-      margin: 30px auto;
-      border-radius: 50% / 50%;
-      background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
-      box-shadow: inset -5px -5px 10px rgba(255,255,255,0.3), inset 5px 5px 10px rgba(0,0,0,0.2);
-      transform-style: preserve-3d;
-      transition: transform 0.1s ease;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-weight: bold;
+    /* Confetti canvas */
+    #confetti-canvas {
+      position: fixed;
+      pointer-events: none;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 9999;
+      display: none;
+    }
+
+    /* Balloon pop game container */
+    #gameContainer {
+      display: none;
+      height: 100vh;
+      background: rgba(255,255,255,0.1);
+      backdrop-filter: blur(5px);
+      overflow: hidden;
+      position: relative;
+      border-radius: 2rem;
+      box-shadow: 0 0 30px rgba(0,0,0,0.3);
+      max-width: 90vw;
+      margin: 0 auto;
+      padding: 1rem;
+    }
+
+    /* Balloon styling */
+    .balloon {
+      position: absolute;
+      border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
+      cursor: pointer;
+      box-shadow: inset -3px -5px 10px rgba(255,255,255,0.6);
+      user-select: none;
+      transition: transform 0.2s ease;
+    }
+    .balloon:active {
+      transform: scale(0.8);
     }
   </style>
 </head>
 <body>
-  <div class="container">
+
+  <button id="toggleViewBtn">Play Balloon Pop Game</button>
+
+  <!-- Birthday container -->
+  <div id="birthdayContainer" class="container">
     <h1 id="title">Happy Birthday!</h1>
     <p>Have the best day ever 🎉</p>
-    <audio id="bg-music" src="no copyright music lofi type beat sparky night free vlog music.mp3" autoplay loop></audio>
-    <button id="playPause">Pause Music</button>
-    <div id="pebble">Happy Bday</div>
-    <button onclick="showGame('balloonGame')">Balloon Game</button>
-    <button onclick="showGame('catchStar')">Catch the Star</button>
-    <button onclick="showGame('memoryGame')">Memory Game</button>
-    <div id="gameContainer"></div>
+    <button id="playPauseBtn">Pause Music</button>
   </div>
 
-  <script>
-    const title = document.getElementById('title');
-    const pebble = document.getElementById('pebble');
-    const audio = document.getElementById('bg-music');
-    const playPauseBtn = document.getElementById('playPause');
-    const gameContainer = document.getElementById('gameContainer');
+  <!-- Balloon Pop Game container -->
+  <div id="gameContainer"></div>
 
+  <canvas id="confetti-canvas"></canvas>
+
+  <audio
+    id="birthdaySong"
+    src="https://raw.githubusercontent.com/Nathanuk1231/HAPPY-BIRTHDAY/main/no%20copyright%20music%20lofi%20type%20beat%20sparky%20night%20free%20vlog%20music.mp3"
+    preload="auto" autoplay loop></audio>
+
+  <script>
+    // Elements
+    const toggleBtn = document.getElementById('toggleViewBtn');
+    const birthdayContainer = document.getElementById('birthdayContainer');
+    const gameContainer = document.getElementById('gameContainer');
+    const playPauseBtn = document.getElementById('playPauseBtn');
+    const birthdaySong = document.getElementById('birthdaySong');
+    const confettiCanvas = document.getElementById('confetti-canvas');
+    const ctx = confettiCanvas.getContext('2d');
+    const title = document.getElementById('title');
+
+    // Setup confetti canvas size
+    function resizeCanvas() {
+      confettiCanvas.width = window.innerWidth;
+      confettiCanvas.height = window.innerHeight;
+    }
+    window.addEventListener('resize', resizeCanvas);
+    resizeCanvas();
+
+    // Confetti setup
+    const confettiCount = 150;
+    const confettiColors = ['#ff0057', '#ff7a00', '#fffa00', '#00ffab', '#00d4ff', '#8b00ff'];
+    const confettiParticles = [];
+
+    class ConfettiParticle {
+      constructor() {
+        this.x = Math.random() * confettiCanvas.width;
+        this.y = Math.random() * confettiCanvas.height - confettiCanvas.height;
+        this.size = Math.random() * 8 + 4;
+        this.color = confettiColors[Math.floor(Math.random() * confettiColors.length)];
+        this.speedY = Math.random() * 3 + 2;
+        this.speedX = Math.random() * 2 - 1;
+        this.rotation = Math.random() * 360;
+        this.rotationSpeed = Math.random() * 10 - 5;
+      }
+      update() {
+        this.y += this.speedY;
+        this.x += this.speedX;
+        this.rotation += this.rotationSpeed;
+        if (this.y > confettiCanvas.height) {
+          this.y = -this.size;
+          this.x = Math.random() * confettiCanvas.width;
+        }
+        if (this.x > confettiCanvas.width) {
+          this.x = 0;
+        }
+        if (this.x < 0) {
+          this.x = confettiCanvas.width;
+        }
+      }
+      draw() {
+        ctx.save();
+        ctx.translate(this.x, this.y);
+        ctx.rotate(this.rotation * Math.PI / 180);
+        ctx.fillStyle = this.color;
+        ctx.fillRect(-this.size / 2, -this.size / 2, this.size, this.size);
+        ctx.restore();
+      }
+    }
+
+    function createConfetti() {
+      confettiParticles.length = 0;
+      for(let i = 0; i < confettiCount; i++) {
+        confettiParticles.push(new ConfettiParticle());
+      }
+    }
+
+    function animateConfetti() {
+      ctx.clearRect(0, 0, confettiCanvas.width, confettiCanvas.height);
+      confettiParticles.forEach(p => {
+        p.update();
+        p.draw();
+      });
+      if(confettiActive) {
+        requestAnimationFrame(animateConfetti);
+      }
+    }
+
+    // Start confetti automatically with music
+    let confettiActive = true;
+    createConfetti();
+    confettiCanvas.style.display = 'block';
+    animateConfetti();
+
+    // Play/Pause music button
+    playPauseBtn.addEventListener('click', () => {
+      if (birthdaySong.paused) {
+        birthdaySong.play();
+        playPauseBtn.textContent = 'Pause Music';
+        if (!confettiActive) {
+          confettiActive = true;
+          confettiCanvas.style.display = 'block';
+          animateConfetti();
+        }
+      } else {
+        birthdaySong.pause();
+        playPauseBtn.textContent = 'Play Music';
+        confettiActive = false;
+        confettiCanvas.style.display = 'none';
+      }
+    });
+
+    // DeviceOrientation effect on title
     if (window.DeviceOrientationEvent) {
       window.addEventListener('deviceorientation', (e) => {
         const gamma = e.gamma || 0;
@@ -109,55 +274,79 @@
         const xShift = x * 300;
         const yShift = y * 300;
         title.style.backgroundPosition = `${xShift}% ${yShift}%`;
-        pebble.style.transform = `rotateX(${beta}deg) rotateY(${gamma}deg)`;
       });
+    } else {
+      alert("Your device doesn't support gyroscope.");
     }
 
-    function pauseMusic(pause) {
-      if (pause) {
-        audio.pause();
-        playPauseBtn.textContent = 'Play Music';
-      } else {
-        audio.play();
-        playPauseBtn.textContent = 'Pause Music';
+    // Balloon pop game code
+    let balloons = [];
+    const balloonColors = ['#ff0057', '#ff7a00', '#fffa00', '#00ffab', '#00d4ff', '#8b00ff'];
+
+    function createBalloon() {
+      const balloon = document.createElement('div');
+      balloon.classList.add('balloon');
+      balloon.style.backgroundColor = balloonColors[Math.floor(Math.random() * balloonColors.length)];
+      balloon.style.width = `${Math.random() * 60 + 40}px`;
+      balloon.style.height = balloon.style.width;
+      balloon.style.left = `${Math.random() * (gameContainer.clientWidth - 60)}px`;
+      balloon.style.top = `${Math.random() * (gameContainer.clientHeight - 60)}px`;
+      balloon.style.zIndex = 10;
+      balloon.style.userSelect = 'none';
+
+      balloon.addEventListener('click', () => {
+        balloonPop(balloon);
+      });
+      gameContainer.appendChild(balloon);
+      balloons.push(balloon);
+    }
+
+    function balloonPop(balloon) {
+      balloon.style.transition = 'transform 0.3s ease, opacity 0.3s ease';
+      balloon.style.transform = 'scale(0)';
+      balloon.style.opacity = '0';
+      setTimeout(() => {
+        if (balloon.parentNode) balloon.parentNode.removeChild(balloon);
+        balloons = balloons.filter(b => b !== balloon);
+        if (balloons.length === 0) {
+          alert('🎉 You popped all the balloons! Happy Birthday! 🎉');
+          startGame();
+        }
+      }, 300);
+    }
+
+    function startGame() {
+      gameContainer.innerHTML = '';
+      balloons = [];
+      const numBalloons = 20;
+      for(let i = 0; i < numBalloons; i++) {
+        createBalloon();
       }
     }
 
-    playPauseBtn.addEventListener('click', () => {
-      pauseMusic(!audio.paused);
+    // Toggle between birthday message and game
+    let onGame = false;
+    toggleBtn.addEventListener('click', () => {
+      if (onGame) {
+        // Back to birthday message
+        gameContainer.style.display = 'none';
+        birthdayContainer.style.display = 'flex';
+        toggleBtn.textContent = 'Play Balloon Pop Game';
+        confettiActive = true;
+        confettiCanvas.style.display = 'block';
+        animateConfetti();
+      } else {
+        // Show game
+        birthdayContainer.style.display = 'none';
+        gameContainer.style.display = 'block';
+        toggleBtn.textContent = 'Back to Birthday';
+        confettiActive = false;
+        confettiCanvas.style.display = 'none';
+        startGame();
+      }
+      onGame = !onGame;
     });
 
-    function showGame(gameId) {
-      let html = '';
-      if (gameId === 'balloonGame') {
-        html = '<p style="color:white">Balloon Game coming soon!</p>';
-      } else if (gameId === 'catchStar') {
-        html = '<p style="color:white">Catch the Star game loading...</p>';
-      } else if (gameId === 'memoryGame') {
-        html = '<p style="color:white">Memory Game loading...</p>';
-      }
-      gameContainer.innerHTML = html;
-    }
-
-    // Simple confetti simulation
-    function launchConfetti() {
-      for (let i = 0; i < 100; i++) {
-        const confetto = document.createElement('div');
-        confetto.style.position = 'fixed';
-        confetto.style.top = Math.random() * window.innerHeight + 'px';
-        confetto.style.left = Math.random() * window.innerWidth + 'px';
-        confetto.style.width = '10px';
-        confetto.style.height = '10px';
-        confetto.style.background = `hsl(${Math.random()*360},100%,50%)`;
-        confetto.style.opacity = 0.8;
-        confetto.style.zIndex = 999;
-        confetto.style.borderRadius = '50%';
-        document.body.appendChild(confetto);
-        setTimeout(() => confetto.remove(), 3000);
-      }
-    }
-
-    launchConfetti();
   </script>
 </body>
 </html>
